<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_halo">Halo!,</string>
    <string name="label_login_start">Login Yuk.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_no_account">Tidak punya akun?</string>
    <string name="label_register_now">Daftar Sekarang</string>
    <string name="label_register_page">Daftar Dulu Yuk.</string>
    <string name="hint_name">Nama</string>
    <string name="hint_birthdate">Tanggal Lahir</string>
    <string name="hint_no_hp">No HP</string>
    <string name="hint_confirm_password">Konfirmasi Password</string>
    <string name="label_have_account">Sudah punya akun?</string>
</resources>